--- a/package.json
+++ b/package.json
@@ -1,11 +1,44 @@
 {
   "name": "gaffer-tape",
   "version": "0.0.1",
-  "description": "wrap/unwrap objects with encryption",
+  "description": "Wrap/unwrap objects with (customised) encryption, zipping and Base64 packing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rebuild": "rm -fr node_modules/; npm install",
+    "aliases": "alias jasmine-node=./node_modules/.bin/jasmine-node; alias eslint=./node_modules/.bin/eslint; alias istanbul=./node_modules/.bin/istanbul",
+    "prep-tests": "rm -fr reports/; mkdir reports/; mkdir reports/eslint/; mkdir reports/junit/; echo \"Reports\n---\" > reports/README.md; echo \"Unit tests results\n---\" > reports/junit/README.md;  echo \"eslint results\n---\" > reports/eslint/README.md",
+    "_eslint": "npm run aliases; OUT='./reports/eslint/eslint.txt'; date > $OUT; eslint src/*.js >> $OUT; eslint ./index.js >> $OUT; eslint tests/specs/*.js >> $OUT; echo \"DONE!\"",
+    "_junit": "npm run prep-tests; npm run aliases; jasmine-node --junitreport --growl tests/specs/; mv reports/*.xml reports/junit/; git checkout tests/props/*.*",
+    "_coverage": "rm -fr reports/coverage/; npm run aliases; istanbul cover --include-all-sources -x \"**src/tool/**\" jasmine-node tests/specs/; rm -fr reports/coverage/; mv coverage reports/; git checkout tests/props/*.*",
+    "_coverage-nyc": "rm -fr reports/coverage/; npm run aliases; nyc --reporter=json npm test",
+    "test": "./node_modules/.bin/jasmine-node --growl tests/specs/",
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:martinswiderski/gaffer-tape.git"
+  },
+  "bugs": {
+    "url": "https://github.com/martinswiderski/gaffer-tape"
+  },
+  "homepage": "https://github.com/martinswiderski/gaffer-tape#readme",
   "author": "Martin Swiderski",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "bash-color": "0.0.4",
+    "eslint": "^3.17.1",
+    "istanbul": "^0.4.5",
+    "jasmine-node": "^1.14.5",
+    "md5-file": "^3.1.1"
+  },
+  "dependencies": {
+    "JSONPath": "^0.11.2",
+    "fs": "0.0.1-security",
+    "md5": "^2.2.1",
+    "path": "^0.12.7",
+    "sha1": "^1.1.1",
+    "shortid": "^2.2.8",
+    "uuid": "^3.1.0",
+    "validator": "^7.2.0",
+    "yamljs": "^0.2.8"
+  }
 }
