--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "_junit": "npm run prep-tests; npm run aliases; jasmine-node --junitreport --growl tests/specs/; mv reports/*.xml reports/junit/; git checkout tests/props/*.*",
     "_coverage": "rm -fr reports/coverage/; npm run aliases; istanbul cover --include-all-sources -x \"**src/tool/**\" jasmine-node tests/specs/; rm -fr reports/coverage/; mv coverage reports/; git checkout tests/props/*.*",
     "_coverage-nyc": "rm -fr reports/coverage/; npm run aliases; nyc --reporter=json npm test",
-    "test": "./node_modules/.bin/jasmine-node --growl tests/specs/",
+    "test": "./node_modules/.bin/jasmine-node --growl tests/specs/"
   },
   "repository": {
     "type": "git",
