--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "rebuild": "rm -fr node_modules/; npm install",
+    "license_report": "alias license-report=./node_modules/.bin/license-report; license-report --output=table > license.csv",
     "aliases": "alias jasmine-node=./node_modules/.bin/jasmine-node; alias eslint=./node_modules/.bin/eslint; alias istanbul=./node_modules/.bin/istanbul",
     "prep-tests": "rm -fr reports/; mkdir reports/; mkdir reports/eslint/; mkdir reports/junit/; echo \"Reports\n---\" > reports/README.md; echo \"Unit tests results\n---\" > reports/junit/README.md;  echo \"eslint results\n---\" > reports/eslint/README.md",
     "_eslint": "npm run aliases; OUT='./reports/eslint/eslint.txt'; date > $OUT; eslint src/*.js >> $OUT; eslint ./index.js >> $OUT; eslint tests/specs/*.js >> $OUT; echo \"DONE!\"",
@@ -36,6 +37,7 @@
     "cryptr": "^3.0.0",
     "fs": "0.0.1-security",
     "jsoncomp": "^1.6.1",
+    "license-report": "^2.1.1",
     "md5": "^2.2.1",
     "path": "^0.12.7",
     "sha1": "^1.1.1",
